<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Farmers-Cart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="select_country_prompt">Select Country</string>

    <string-array name="country_array">
        <item>India</item>
        <item>America</item>
        <item>England</item>
        <item>Africa</item>
        <item>Australia</item>
    </string-array>

    <string name="select_selling_payment_prompt">Select Payment Option</string>

    <string-array name="select_selling_payment_array">
        <item>Cash On Delivery</item>
    </string-array>

    <string name="login">Login</string>
    <string name="phone_no">Phone No:</string>
    <string name="password">Password:</string>
    <string name="register_here">Register Here</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="optional_phone">Optional Phone:</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="city">City:</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="type_old_password">Type Old Password</string>
    <string name="type_new_password">Type New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="messages">Messages</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="my_buying">My Buying</string>
    <string name="my_selling">My Selling</string>
    <string name="search">Search</string>
    <string name="category">Category :</string>
    <string name="sub_category">Sub Category : </string>
    <string name="price">Price :</string>
    <string name="total_quantity">Total Quantity :</string>
    <string name="total_price">Total Price : </string>
    <string name="brand">Brand Name : </string>
    <string name="delivery_type">Delivery Type : </string>
    <string name="item_type">Item Type :  </string>
    <string name="item_quantity">Item Quantity :  </string>
    <string name="item_cost">Item Cost (per kg) :  </string>
    <string name="item_description">Item Description :   </string>
    <string name="total_cost">Total Cost :   </string>
    <string name="add">Add  </string>
    <string name="cancel">Cancel   </string>
    <string name="address">Address</string>
    
     <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
   <!--  <string name="app_id">355198514515820</string> -->
   <string name="app_id">650378444993528</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected"><No friends="" selected=""></No></string>
    <string name="no_place_selected"><No place="" selected=""></No></string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
    <string name="cancelled">Cancelled</string>

</resources>