<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_old_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/type_new_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/et_new_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/retype_new_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/save"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>