<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_selling_each_item_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/splash_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/item_type" />

            <TextView
                android:id="@+id/tv_selling_item_type"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/item_quantity" />

            <EditText
                android:id="@+id/et_selling_item_quantity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/item_cost" />

            <TextView
                android:id="@+id/tv_selling_item_cost"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/total_cost" />

            <TextView
                android:id="@+id/tv_selling_item_total_cost"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/item_description" />

            <TextView
                android:id="@+id/tv_selling_item_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/delivery_type" />

            <Spinner
                android:id="@+id/sp_selling_item_payment_type"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:entries="@array/select_selling_payment_array"
                android:gravity="center_vertical"
                android:prompt="@string/select_selling_payment_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>