<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#000000"
                android:text="Farmers-cart"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/tv_buying"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/buying"
                android:textSize="14sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/tv_selling"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/selling"
                android:textSize="14sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/tv_message"                
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/messages"
                android:textSize="14sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/log_out"
                android:textSize="14sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/settings"
                android:textSize="14sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:orientation="vertical" >
            </LinearLayout>
            
        </LinearLayout>
        
        <ImageView 
            android:layout_marginTop="10dp"
            android:layout_height="120dp"
            android:layout_width="fill_parent"
            android:scaleType="fitXY"
            android:background="@drawable/logo_12"/>
    </LinearLayout>

</ScrollView>