<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.90"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ACACAC"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#F1F1F1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <EditText
                        android:id="@+id/et_login_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:background="@xml/rounded_corner_input_box"
                        android:imeOptions="actionNext"
                        android:paddingLeft="2dp"
                        android:inputType="number"
                        android:singleLine="true" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.30"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.70"
                    android:orientation="vertical"
                    android:padding="2dp" >

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:background="@xml/rounded_corner_input_box"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingLeft="2dp"
                        android:singleLine="true" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@xml/rounded_corner_btn"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_log_registration"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/register_here"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic"
                android:background="#23b14b" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>